force-app/main/default/objects/MandatoryAttachments__c/MandatoryAttachments__c.object-meta.xml
<CustomObject>
    <description>Tabella Amministrativa per gestione allegati obbligatori nei processi tari</description>
    <label>Allegati Obbligatori</label>
    <nameField>
        <displayFormat>AO-{0000000}</displayFormat>
        <label>Allegati Obbligatori Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allegati Obbligatori</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>