force-app/main/default/objects/MandatoryAttachments__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>