force-app/main/default/objects/MandatoryAttachments__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>