force-app/main/default/objects/MandatoryAttachments__c/fields/MacroTopic__c.field-meta.xml
<CustomField>
    <fullName>MacroTopic__c</fullName>
    <label>Macro Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>