force-app/main/default/objects/MandatoryAttachments__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Tipo Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>