force-app/main/default/objects/MandatoryAttachments__c/fields/SubProcessType__c.field-meta.xml
<CustomField>
    <fullName>SubProcessType__c</fullName>
    <label>Tipo Sotto Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>