force-app/main/default/objects/MandatoryAttachments__c/fields/SubscriberType__c.field-meta.xml
<CustomField>
    <fullName>SubscriberType__c</fullName>
    <label>Qualità del sottoscrittore</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SubscriberType</valueSetName>
    </valueSet>
</CustomField>